Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Thu Sep 29 22:45:52 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Relink executable if library changes

